# tensorflow-lite-sys

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs
src/: lib.rs
tests/: builtin_op_data_test.rs  c_api_experimental_test.rs  c_api_test.rs  c_test.rs  common_test.rs
v2.4/tensorflow/lite/c/: c_api.h  common.h
v2.4/tensorflow/lite/delegates/coreml/: coreml_delegate.h
v2.4/tensorflow/lite/delegates/gpu/: delegate.h  metal_delegate.h
v2.4/tensorflow/lite/delegates/hexagon/: hexagon_delegate.h
v2.4/tensorflow/lite/delegates/xnnpack/: xnnpack_delegate.h
v2.5/tensorflow/lite/: builtin_ops.h
v2.5/tensorflow/lite/c/: builtin_op_data.h  c_api.h  c_api_types.h  common.h
v2.5/tensorflow/lite/delegates/gpu/: delegate.h  metal_delegate.h
v2.5/tensorflow/lite/delegates/hexagon/: hexagon_delegate.h
v2.5/tensorflow/lite/delegates/xnnpack/: xnnpack_delegate.h
