[package]
name = "tensorflow-lite-sys"
version = "0.1.0"
authors = ["Wonway Song <sww718168@163.com>"]
edition = "2018"
documentation = "https://docs.rs/tensorflow-lite-sys"
repository = "https://github.com/songww/tensorflow-lite-sys"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.58"
zip = { version = "0.5.12", default-features = false, features = [ "deflate" ] }
# minreq = { version = "2.3.1", features = [ "https" ] }

[features]
default = [ "v2.5", "xnnpack" ]
"v2.4" = []
"v2.5" = []
gpu = []
metal = []
coreml = []
hexagon = []
xnnpack = []
experimental = []
"select-tf-ops" = []

[dev-dependencies]
vsprintf = "2.0.0"
